@@ -2,6 +2,17 @@
 
 	* ufs.h: Add #include <sys/mman.h> for munmap decl.
 
+1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* dir.c (diskfs_get_directs): Use mmap instead of vm_allocate.
+	* hyper.c (get_hypermetadata): Likewise.
+	* pager.c (pager_read_page): Likewise.
+
+1999-07-06  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* hyper.c (diskfs_readonly_changed): Use mprotect instead of
+	vm_protect. 
+
 Mon Jul  5 20:04:58 1999  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* dir.c (diskfs_lookup_hard): Repair typo.  Reported by Yamashita
